hexo-blog-backup

--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -24,6 +24,12 @@ $blue         = #0684bd
 $blue-deep    = #262a30
 $orange       = #fc6423
 
+// 下面是我自定义的颜色
+$my-link-blue = #0593d3  //链接颜色
+$my-link-hover-blue = #0477ab  //鼠标悬停后颜色
+$my-code-foreground = #dd0055  // 用``围出的代码块字体颜色
+$my-code-background = #eee  // 用``围出的代码块背景颜色
+
 
 
 // Scaffolding
@@ -34,10 +40,15 @@ $orange       = #fc6423
 $text-color                   = $black-light
 
 // Global link color.
-$link-color                   = $black-light
-$link-hover-color             = $black-deep
-$link-decoration-color        = $grey-light
-$link-decoration-hover-color  = $black-deep
+//$link-color                   = $black-light
+//$link-hover-color             = $black-deep
+//$link-decoration-color        = $grey-light
+//$link-decoration-hover-color  = $black-deep
+// Global link color.
+$link-color                   = $my-link-blue
+$link-hover-color             = $my-link-hover-blue
+$link-decoration-color        = $gray-lighter
+$link-decoration-hover-color  = $my-link-hover-blue
 
 // Global border color.
 $border-color                 = $grey-light
@@ -91,7 +102,7 @@ $font-weight-bolder       = 700
 
 
 // Font size
-$font-size-base           = 14px
+$font-size-base           = 16px
 $font-size-small          = $font-size-base - 2px
 $font-size-smaller        = $font-size-base - 4px
 $font-size-large          = $font-size-base + 2px
@@ -141,11 +152,22 @@ $table-row-hover-bg-color       = $whitesmoke
 
 // Code & Code Blocks
 // --------------------------------------------------
+//$code-font-family               = $font-family-monospace
+//$code-font-size                 = 14px
+//$code-background                = $gainsboro
+//$code-foreground                = $black-light
+//$code-border-radius             = 4px
+
+// Code & Code Blocks
+// 用``围出的代码块
+// 自定义
+// --------------------------------------------------
 $code-font-family               = $font-family-monospace
-$code-font-size                 = 13px
-$code-background                = $gainsboro
-$code-foreground                = $black-light
+$code-font-size                 = 15px
+$code-background                = $my-code-background
+$code-foreground                = $my-code-foreground
 $code-border-radius             = 4px
+
 
 
 
